--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ configure(allprojects) { project ->
 	group = "org.springframework"
 	repositories {
 		mavenCentral()
+		maven { url "https://maven.aliyun.com/repository/public" }
 		maven {
 			url "https://repo.spring.io/milestone"
 			content {
